--- a/LibraRim/app/src/main/res/layout/activity_settings.xml
+++ b/LibraRim/app/src/main/res/layout/activity_settings.xml
@@ -56,7 +56,8 @@
         <FrameLayout
             android:id="@+id/set_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
         </FrameLayout>
     </LinearLayout>
 </LinearLayout>
