--- a/LibraRim/app/src/main/res/layout/activity_list.xml
+++ b/LibraRim/app/src/main/res/layout/activity_list.xml
@@ -99,6 +99,7 @@
             android:layout_marginTop="150dp"
             >
             <ImageView
+                android:id="@+id/bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
@@ -111,12 +112,30 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_marginTop="260dp">
+
+            <TextView
+                android:id="@+id/nothing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:text="검색결과가 없습니다"
+                android:textSize="30dp"/>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="90dp"
+                android:layout_height="140dp"
+                android:layout_centerHorizontal="true"/>
+
             <ListView
                 android:id="@+id/book_listview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:choiceMode="singleChoice"
                 android:dividerHeight="1.5dp"></ListView>
+
         </RelativeLayout>
     </FrameLayout>
 
