--- a/LibraRim/app/src/main/res/layout/book_list_item.xml
+++ b/LibraRim/app/src/main/res/layout/book_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_gravity="center_vertical"
+        android:background="#FFFFFF"
         >
 
         <RelativeLayout
