--- a/LibraRim/app/src/main/res/layout/fragment_home.xml
+++ b/LibraRim/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
             android:src="@drawable/btn_search"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="49dp"
+            android:layout_marginBottom="47dp"
             android:layout_marginRight="55dp"
             android:layout_marginEnd="55dp"/>
 
@@ -69,12 +69,51 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="100dp"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView3"
+            android:layout_toEndOf="@id/textView3"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView4"
+            android:layout_toEndOf="@id/textView4"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView5"
+            android:layout_toEndOf="@id/textView5"
+            android:text="이미지\n로딩중"/>
+
         <ImageButton
             android:id="@+id/imageView3"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
             android:layout_marginLeft="40dp"
             android:layout_marginStart="40dp"
             android:layout_alignParentTop="true"
@@ -84,6 +123,7 @@
 
         <ImageButton
             android:id="@+id/imageView4"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:layout_marginLeft="40dp"
@@ -91,15 +131,14 @@
             android:layout_toEndOf="@+id/imageView3"
             android:layout_toRightOf="@+id/imageView3"
             android:background="@android:color/transparent"
-            android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher" />
+            android:onClick="getBookInfoPage" />
 
         <ImageButton
             android:id="@+id/imageView5"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
             android:layout_toRightOf="@+id/imageView4"
             android:layout_toEndOf="@+id/imageView4"
             android:layout_marginLeft="40dp"
@@ -108,16 +147,17 @@
 
         <ImageButton
             android:id="@+id/imageView6"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
             tools:ignore="MissingConstraints"
             android:layout_toRightOf="@+id/imageView5"
             android:layout_toEndOf="@+id/imageView5"
             android:layout_marginLeft="40dp"
             android:layout_marginStart="40dp"
             android:background="@android:color/transparent"/>
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -155,25 +195,64 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="100dp"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView7"
+            android:layout_toEndOf="@id/textView7"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView8"
+            android:layout_toEndOf="@id/textView8"
+            android:text="이미지\n로딩중" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="100dp"
+            android:layout_toRightOf="@id/textView9"
+            android:layout_toEndOf="@id/textView9"
+            android:text="이미지\n로딩중"/>
+
         <ImageButton
             android:id="@+id/imageView7"
             android:layout_width="150dp"
             android:layout_height="230dp"
-            android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
-            android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="@android:color/transparent"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
+            android:background="@android:color/transparent"
+            android:onClick="getBookInfoPage"
+            android:scaleType="centerInside"/>
 
         <ImageButton
             android:id="@+id/imageView8"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
             android:layout_toRightOf="@+id/imageView7"
             android:layout_toEndOf="@+id/imageView7"
             android:layout_marginLeft="40dp"
@@ -182,10 +261,10 @@
 
         <ImageButton
             android:id="@+id/imageView9"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
             android:onClick="getBookInfoPage"
-            android:src="@mipmap/ic_launcher"
             android:layout_toRightOf="@+id/imageView8"
             android:layout_toEndOf="@+id/imageView8"
             android:layout_marginLeft="40dp"
@@ -194,9 +273,9 @@
 
         <ImageButton
             android:id="@+id/imageView10"
+            android:scaleType="centerInside"
             android:layout_width="150dp"
             android:layout_height="230dp"
-            android:src="@mipmap/ic_launcher"
             android:onClick="getBookInfoPage"
             android:layout_toRightOf="@+id/imageView9"
             android:layout_toEndOf="@+id/imageView9"
