--- a/LibraRim/app/src/main/res/layout/fragment_serviceinfo.xml
+++ b/LibraRim/app/src/main/res/layout/fragment_serviceinfo.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="123dp"
+        android:layout_height="120dp"
         android:background="#b9cd9a"
         android:orientation="horizontal">
 
