--- a/LibraRim/app/src/main/res/layout/book_list_item.xml
+++ b/LibraRim/app/src/main/res/layout/book_list_item.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="10dp"
@@ -17,7 +15,7 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1.8">
+            android:layout_weight="5.5">
 
             <ImageView
                 android:id="@+id/bookprofile"
@@ -27,18 +25,17 @@
                 android:layout_gravity="center_vertical"
                 android:background="@android:color/transparent"
                 android:src="@mipmap/ic_launcher"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3.7">
+
             <TextView
                 android:id="@+id/list_booktitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_toRightOf="@id/bookprofile"
                 android:gravity="center"
                 android:text="책 제목" />
+
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
